--- a/sample/styles.css
+++ b/sample/styles.css
@@ -507,3 +507,14 @@ wiki {
 .ck-abbr-ul .ck.ck-button .ck-button__label{
 	display: block;
 }
+.mention {
+	display: inline-block;
+	height: 26px;
+	padding: 0 4px 0 6px;
+	border-radius: 4px;
+	background: rgba(72, 128, 255, 0.06);
+
+	line-height: 26px;
+	color: rgba(72, 128, 255, 1);
+	font-size: 16px;
+}
